--- a/style.css
+++ b/style.css
@@ -13,10 +13,20 @@ body{
     color: #fff;
 }
 
+.container{
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to right, rgba(30,0,0,0.6),rgba(0,0,50,0.6));
+}
+
+.logo{
+    font-size: 1.8rem;
+}
+
 .navbar{
     display: flex;
     justify-content: space-between;
-    padding: 20px 12px;
+    padding: 20px 30px;
     align-items: center;
     z-index: 1;
     position: relative;
@@ -49,6 +59,8 @@ body{
     top: 0;
     left: 0;
     background-color: #000;
+    background: linear-gradient(to right, rgba(33,33,33,0.9),rgba(0,0,10,.89)) , url('bg.avif') center no-repeat;
+    background-size: cover;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -79,6 +91,7 @@ body{
     gap: 4px;
     text-transform: uppercase;
     font-size: 1.8rem;
+    font-weight: bold;
 }
 
 .navigation .menu-items a{
@@ -136,7 +149,9 @@ body{
     margin-top: 10px;
     opacity: 0;
     visibility: hidden;
+    cursor: pointer;
 }
+
 .navigate .navigation button{
     opacity: 1;
     visibility: visible;
@@ -163,11 +178,14 @@ button:active{
     font-size: 3rem;
 }
 .hero  button{
-    padding: 10px 12px;
+    padding: 10px 20px;
     border-radius: 12px;
     cursor: pointer;
     transition: all .3s;
     background-color: #fff;
+    font-weight: 500;
+    font-size: 1rem;
+    color: #000;
 }
 
 .hero button:hover{
